--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 1vw;
   font-weight: 300;
   line-height: 1.6;
   color: var(--accent-color);
@@ -766,7 +766,7 @@ h5 {
 }
 
 #header-nav .offcanvas-end {
-  width: 500px;
+  width: 60vw;
 }
 
 .offcanvas.show .nav-item a.nav-link {
@@ -783,7 +783,7 @@ h5 {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 1040px) {
   #navbar .user-items {
     display: none;
   }
